tests/snapshots/run_wpt_conformance__onnx_reduceSumSquare_float16_0D_constant_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_sum_square.https.any.js",
    "reduceSumSquare float16 0D constant tensor empty axes",
    "onnx",
    "PASS",
)
